@@ -1,5 +1,9 @@
 # time_scheduler
 
-To run the code with completed UI, you have to launch the app with the following JVM Parameter:
+To run the code with completed UI, you have to launch the app with the following VM Parameter:
       
---add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED,
+--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED,
+--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED,
+--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED,
+--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED
